# system-modes

./: main.py  pyproject.toml
src/system_modes/: __init__.py  cli.py  core.py  modes.py
tests/: __init__.py  test_basic.py
