[project]
name = "system-modes"
version = "0.1.0"
description = "System mode switcher for gaming, AI, and balanced operation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "psutil>=7.0.0",
    "rich>=14.1.0",
]

[project.scripts]
system-modes = "system_modes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/system_modes"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
